# FollowTheDot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: game.py  patterns.py
src/eyetrax_game/: __init__.py  calibration.py  debug_check.py  game.py  main.py  patterns.py
