[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyetrax-game"
version = "0.1.0"
description = "Eye tracking game using EyeTrax library"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "eyetrax>=0.2.2",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
eyetrax-game = "eyetrax_game.main:main"